--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroui/system": "^2.4.11",
     "@heroui/theme": "^2.4.11",
     "@hookform/resolvers": "^4.1.3",
+    "@netlify/plugin-nextjs": "^5.9.4",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.3",
